stuck on my barOneStyle issue

--- a/src/components/merge/style.css
+++ b/src/components/merge/style.css
@@ -1,6 +1,7 @@
 .array-container {
     /* position: absolute; */
     left: 100px;
+    background-color: black
     
 
 }
